--- a/cn.zh-CN/运维与监控/云助手/使用云助手/执行命令.md
+++ b/cn.zh-CN/运维与监控/云助手/使用云助手/执行命令.md
@@ -13,7 +13,7 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
 
 -   调用API执行命令时最多可以选择50台实例。
 -   通过ECS管理控制台一次执行命令操作的实例数量大于50台时，系统会自动分批执行命令。
--   在一个阿里云地域下，您每天最多能执行5000次云助手命令，配额随您的云服务器使用情况可能会增加。
+-   在一个阿里云地域下，您每天最多能执行5000次云助手命令，配额随您的云服务器使用情况可能会增加。关于如何查询配额，请参见[步骤一：查看资源配额](/cn.zh-CN/标签与资源/资源/权益配额/查看和提升资源配额.md)。
 
     **说明：** 您也可以调用API DescribeAccountAttributes，将参数AttributeName.N设置为max-axt-invocation-daily，查询一个地域下单天能运行的云助手命令次数上限。
 
@@ -26,7 +26,7 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
 
 3.  在顶部菜单栏左上角处，选择地域。
 
-4.  找到需要执行的云助手命令，在右侧**操作**列中，单击**执行**。
+4.  找到目标云助手命令，在右侧**操作**列中，单击**执行**。
 
 5.  在**执行命令**面板中，配置执行参数。
 
@@ -37,6 +37,9 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
         |名称|描述|
         |--|--|
         |命令内容|单击**查看命令内容**确认命令内容。|
+        |执行计划|选择命令执行时间。        -   **立即执行**：单击**执行**或**执行并保存**后，立即执行命令。
+        -   **系统下一次启动后**：单击**执行**或**执行并保存**后，实例下次启动时执行命令。
+        -   **系统每次启动后**：单击**执行**或**执行并保存**后，实例每次启动时执行命令。 |
         |执行用户|在ECS实例中执行命令的用户名称。使用最小权限执行命令是权限管理的最佳实践，建议您以普通用户身份执行云助手命令。更多信息，请参见[设置普通用户执行云助手命令](/cn.zh-CN/运维与监控/云助手/DevOps自动化运维实践/设置普通用户执行云助手命令.md)。
 
 默认情况下，在Linux实例中以root用户执行命令，在Windows实例中以System用户执行命令。 |
@@ -47,7 +50,7 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
 
         若实例过多，您可以在搜索框内输入实例ID、实例名称或标签等，并过滤云助手客户端的状态。
 
-        **说明：** 托管实例是云助手托管的非阿里云服务器，目前仅支持华北2（北京）、华东1（杭州）、华东2（上海）三个地域。更多信息，请参见[托管非阿里云服务器](/cn.zh-CN/运维与监控/云助手/配置云助手客户端/托管非阿里云服务器.md)。
+        **说明：** 托管实例是云助手托管的非阿里云服务器，更多信息，请参见[混合云托管服务器](/cn.zh-CN/运维与监控/云助手/混合云托管服务器.md)。
 
 6.  单击**执行**。
 
@@ -59,6 +62,8 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
     ```
     aliyun ecs StartInstance --InstanceId 'i-bp1f4f6o8lv0wqof****' 
     ```
+
+    **说明：** 半角单引号（''）内为参数的示例取值，您需要根据实际情况修改。
 
     更多信息，请参见[StartInstance](/cn.zh-CN/API参考/实例/StartInstance.md)。
 
