--- a/cn.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md
+++ b/cn.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md
@@ -118,7 +118,7 @@ ebmg6a的特点如下：
 -   超高网络性能，2400万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   视频编解码、渲染等
     -   计算集群、依赖内存的数据处理
@@ -126,9 +126,9 @@ ebmg6a的特点如下：
 
 ebmg6a包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|---|:---|-------|---------|------------|
-|ecs.ebmg6a.64xlarge|256|1024.0|64.0|2400|32|31|10|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|---|:---|-------|------|------------|
+|ecs.ebmg6a.64xlarge|256|1024.0|64.0|2400万|32|31|10|60.0万|32.0|
 
 **说明：**
 
@@ -150,7 +150,7 @@ ebmg6e的特点如下：
 -   超高网络性能，2400万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   高网络包收发场景，例如视频弹幕、电信业务转发等
     -   各种类型和规模的企业级应用
@@ -163,9 +163,9 @@ ebmg6e的特点如下：
 
 ebmg6e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|:---|-------|---------|------------|
-|ecs.ebmg6e.26xlarge|104|384.0|32.0|2400|180|32|10|48.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmg6e.26xlarge|104|384.0|32.0|2400万|180万|32|10|48.0万|16.0|
 
 **说明：**
 
@@ -186,7 +186,7 @@ ebmg6的特点如下：
 -   高网络性能，600万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   视频编解码、渲染等
     -   中大型企业等重量级数据库应用
@@ -195,9 +195,9 @@ ebmg6的特点如下：
 
 ebmg6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|:---|-------|---------|------------|
-|ecs.ebmg6.26xlarge|104|384.0|32.0|600|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmg6.26xlarge|104|384.0|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -219,16 +219,16 @@ ebmc6a的特点如下：
 -   超高网络性能，2400万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   视频编解码、渲染等
     -   数据分析和计算
 
 ebmc6a包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|---|:---|-------|---------|------------|
-|ecs.ebmc6a.64xlarge|256|512.0|64.0|2400|32|31|10|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|---|:---|-------|------|------------|
+|ecs.ebmc6a.64xlarge|256|512.0|64.0|2400万|32|31|10|60.0万|32.0|
 
 **说明：**
 
@@ -250,7 +250,7 @@ ebmc6e的特点如下：
 -   超高网络性能，2400万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   高网络包收发场景，例如视频弹幕、电信业务转发等
     -   Web前端服务器
@@ -260,9 +260,9 @@ ebmc6e的特点如下：
 
 ebmc6e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|:---|-------|---------|------------|
-|ecs.ebmc6e.26xlarge|104|192.0|32.0|2400|180|32|10|48.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmc6e.26xlarge|104|192.0|32.0|2400万|180万|32|10|48.0万|16.0|
 
 **说明：**
 
@@ -283,7 +283,7 @@ ebmc6的特点如下：
 -   高网络性能，600万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   视频编解码、渲染等
     -   大型多人在线游戏（MMO）前端
@@ -291,9 +291,9 @@ ebmc6的特点如下：
 
 ebmc6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|:---|-------|---------|------------|
-|ecs.ebmc6.26xlarge|104|192.0|32.0|600|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmc6.26xlarge|104|192.0|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -315,7 +315,7 @@ ebmr6a的特点如下：
 -   超高网络性能，2400万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   内存数据库
     -   数据分析与挖掘、分布式内存缓存
@@ -323,9 +323,9 @@ ebmr6a的特点如下：
 
 ebmr6a包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|---|:---|-------|---------|------------|
-|ecs.ebmr6a.64xlarge|256|2048.0|64.0|2400|32|31|10|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|---|:---|-------|------|------------|
+|ecs.ebmr6a.64xlarge|256|2048.0|64.0|2400万|32|31|10|60.0万|32.0|
 
 **说明：**
 
@@ -347,7 +347,7 @@ ebmr6e的特点如下：
 -   超高网络性能，2400万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   高网络包收发场景，例如视频弹幕、电信业务转发等
     -   高性能数据库、内存数据库
@@ -357,9 +357,9 @@ ebmr6e的特点如下：
 
 ebmr6e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|:---|-------|---------|------------|
-|ecs.ebmr6e.26xlarge|104|768.0|32.0|2400|180|32|10|48.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmr6e.26xlarge|104|768.0|32.0|2400万|180万|32|10|48.0万|16.0|
 
 **说明：**
 
@@ -380,7 +380,7 @@ ebmr6的特点如下：
 -   高网络性能，600万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   高性能数据库、内存数据库
     -   数据分析与挖掘、分布式内存缓存
@@ -388,9 +388,9 @@ ebmr6的特点如下：
 
 ebmr6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|:---|-------|---------|------------|
-|ecs.ebmr6.26xlarge|104|768.0|32.0|600|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmr6.26xlarge|104|768.0|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -419,9 +419,9 @@ ebmre6p的特点如下：
 
 ebmre6p包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|持久内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|---------|:-----------|:----------|:---|-------|---------|------------|
-|ecs.ebmre6p.26xlarge|104|384.0|1536.0|32.0|600|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|持久内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|---------|:-----------|:-------|:---|-------|------|------------|
+|ecs.ebmre6p.26xlarge|104|384.0|1536.0|32.0|600万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -450,9 +450,9 @@ ebmre6-6t的特点如下：
 
 ebmre6-6t包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|:---|-------|---------|------------|
-|ecs.ebmre6-6t.52xlarge|208|6144.0|32.0|600|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmre6-6t.52xlarge|208|6144.0|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -483,9 +483,9 @@ ebmhfg7的特点如下：
 
 ebmhfg7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|---------|------------|
-|ecs.ebmhfg7.48xlarge|192|768.0|64.0|2400|32|31|10|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.ebmhfg7.48xlarge|192|768.0|64.0|2400万|32|31|10|60.0万|32.0|
 
 **说明：**
 
@@ -515,9 +515,9 @@ ebmhfc7的特点如下：
 
 ebmhfc7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|---------|------------|
-|ecs.ebmhfc7.48xlarge|192|384.0|64.0|2400|32|31|10|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.ebmhfc7.48xlarge|192|384.0|64.0|2400万|32|31|10|60.0万|32.0|
 
 **说明：**
 
@@ -546,9 +546,9 @@ ebmhfr7的特点如下：
 
 ebmhfr7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|---------|------------|
-|ecs.ebmhfr7.48xlarge|192|1536.0|64.0|2400|32|31|10|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.ebmhfr7.48xlarge|192|1536.0|64.0|2400万|32|31|10|60.0万|32.0|
 
 **说明：**
 
@@ -569,16 +569,16 @@ ebmhfg6的特点如下：
 -   高网络性能，600万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   中大型企业等重量级数据库应用
     -   视频编解码、渲染等
 
 ebmhfg6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|:---|-------|---------|------------|
-|ecs.ebmhfg6.20xlarge|80|384.0|32.0|600|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmhfg6.20xlarge|80|384.0|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -600,15 +600,15 @@ ebmhfc6的特点如下：
 -   适用场景：
     -   高网络包收发场景，例如视频弹幕、电信业务转发等
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   视频编解码、渲染等
 
 ebmhfc6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|:-----|:---|-------|---------|------------|
-|ecs.ebmhfc6.20xlarge|80|192.0|32.0|600|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.ebmhfc6.20xlarge|80|192.0|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -629,7 +629,7 @@ ebmhfr6的特点如下：
 -   高网络性能，600万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   高性能数据库、内存数据库
     -   数据分析与挖掘、分布式内存缓存
@@ -637,9 +637,9 @@ ebmhfr6的特点如下：
 
 ebmhfr6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|:-----|:---|-------|---------|------------|
-|ecs.ebmhfr6.20xlarge|80|768.0|32.0|600|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.ebmhfr6.20xlarge|80|768.0|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -667,9 +667,9 @@ ebmi2g的特点如下：
 
 ebmi2g包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:--------|:-----------|:----------|------|:---|-------|---------|------------|
-|ecs.ebmi2g.24xlarge|96|384.0|4\*1788|32.0|600|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|本地存储（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:--------|:-----------|:-------|---|:---|-------|------|------------|
+|ecs.ebmi2g.24xlarge|96|384.0|4\*1788|32.0|600万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -695,9 +695,9 @@ ebmgn7的特点如下：
 
 ebmgn7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|GPU|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|---|:-----------|:----------|:--|:---|-------|
-|ecs.ebmgn7.26xlarge|104|768.0|NVIDIA A100 \* 8|30.0|1800|16|15|10|
+|实例规格|vCPU|内存（GiB）|GPU|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|---|:-----------|:-------|:--|:---|-------|
+|ecs.ebmgn7.26xlarge|104|768.0|NVIDIA A100 \* 8|30.0|1800万|16|15|10|
 
 **说明：**
 
@@ -728,9 +728,9 @@ ebmgn6e的特点如下：
 
 ebmgn6e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|---|-----|:-----------|:----------|:--|:---|-------|
-|ecs.ebmgn6e.24xlarge|96|768.0|NVIDIA V100 \* 8|32GB \* 8|32.0|480|16|15|20|
+|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|---|-----|:-----------|:-------|:--|:---|-------|
+|ecs.ebmgn6e.24xlarge|96|768.0|NVIDIA V100 \* 8|32GB \* 8|32.0|480万|16|15|20|
 
 **说明：**
 
@@ -761,9 +761,9 @@ ebmgn6v的特点如下：
 
 ebmgn6v包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|---|-----|:-----------|:----------|:--|:---|-------|
-|ecs.ebmgn6v.24xlarge|96|384.0|NVIDIA V100 \* 8|16GB \* 8|30.0|450|8|32|10|
+|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|---|-----|:-----------|:-------|:--|:---|-------|
+|ecs.ebmgn6v.24xlarge|96|384.0|NVIDIA V100 \* 8|16GB \* 8|30.0|450万|8|32|10|
 
 **说明：**
 
@@ -797,9 +797,9 @@ ebmgn6i的特点如下：
 
 ebmgn6i包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|---|-----|:-----------|:----------|:--|:---|-------|
-|ecs.ebmgn6i.24xlarge|96|384.0|NVIDIA T4 \* 4|16GB \* 4|30.0|450|8|32|10|
+|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|---|-----|:-----------|:-------|:--|:---|-------|
+|ecs.ebmgn6i.24xlarge|96|384.0|NVIDIA T4 \* 4|16GB \* 4|30.0|450万|8|32|10|
 
 **说明：**
 
@@ -819,16 +819,16 @@ ebmg5s的特点如下：
 -   高网络性能，450万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   中大型企业等重量级数据库应用
     -   视频编码
 
 ebmg5s包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|:-----|:---|-------|---------|------------|
-|ecs.ebmg5s.24xlarge|96|384.0|32.0|450|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.ebmg5s.24xlarge|96|384.0|32.0|450万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -848,16 +848,16 @@ ebmg5的特点如下：
 -   高网络性能，400万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   中大型企业等重量级数据库应用
     -   视频编码
 
 ebmg5包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:---|-------|
-|ecs.ebmg5.24xlarge|96|384.0|10.0|400|32|10|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:---|-------|
+|ecs.ebmg5.24xlarge|96|384.0|10.0|400万|32|10|
 
 **说明：**
 
@@ -878,15 +878,15 @@ ebmc5s的特点如下：
 -   适用场景：
     -   高网络包收发场景，例如视频弹幕、电信业务转发等
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   视频编解码、渲染等
 
 ebmc5s包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|:-----|:---|-------|---------|------------|
-|ecs.ebmc5s.24xlarge|96|192.0|32.0|450|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.ebmc5s.24xlarge|96|192.0|32.0|450万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -906,16 +906,16 @@ ebmc4的特点如下：
 -   高网络性能，400万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   中大型企业等重量级数据库应用
     -   视频编码
 
 ebmc4包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:---|-------|
-|ecs.ebmc4.8xlarge|32|64.0|10.0|400|12|10|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:---|-------|
+|ecs.ebmc4.8xlarge|32|64.0|10.0|400万|12|10|
 
 **说明：**
 
@@ -935,7 +935,7 @@ ebmr5s的特点如下：
 -   高网络性能，450万PPS网络收发包能力
 -   适用场景：
     -   需要直接访问物理资源，或者需要License绑定硬件等要求的工作负载
-    -   第三方虚拟化（包括但不限于Xen、KVM等）、AnyStack（包括但不限于OpenStack、ZStack等）
+    -   兼容第三方Hypervisor，满足混合云和多云部署诉求
     -   容器（包括但不限于Docker、Clear Container、Pouch等）
     -   高性能数据库、内存数据库
     -   数据分析与挖掘、分布式内存缓存
@@ -943,9 +943,9 @@ ebmr5s的特点如下：
 
 ebmr5s包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|:-----|:---|-------|---------|------------|
-|ecs.ebmr5s.24xlarge|96|768.0|32.0|450|180|32|10|20.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.ebmr5s.24xlarge|96|768.0|32.0|450万|180万|32|10|20.0万|16.0|
 
 **说明：**
 
@@ -976,9 +976,9 @@ ebmhfg5的特点如下：
 
 ebmhfg5包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:---|-------|
-|ecs.ebmhfg5.2xlarge|8|32.0|6.0|200|6|8|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:---|-------|
+|ecs.ebmhfg5.2xlarge|8|32.0|6.0|200万|6|8|
 
 **说明：**
 
