--- a/intl.zh-CN/实例/选择实例规格/内存型/内存型.md
+++ b/intl.zh-CN/实例/选择实例规格/内存型/内存型.md
@@ -50,17 +50,17 @@ r7的特点如下：
 
 r7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:-------|------|---|:---|-------|------|------------|
-|ecs.r7.large|2|16.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
-|ecs.r7.xlarge|4|32.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
-|ecs.r7.2xlarge|8|64.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
-|ecs.r7.3xlarge|12|96.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
-|ecs.r7.4xlarge|16|128.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
-|ecs.r7.6xlarge|24|192.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
-|ecs.r7.8xlarge|32|256.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
-|ecs.r7.16xlarge|64|512.0|32.0|1200万|是|32|8|30|30.0万|16.0|
-|ecs.r7.32xlarge|128|1024.0|64.0|2400万|是|32|15|30|60.0万|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS基础/突发|云盘带宽基础/突发r（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|------|---|---|:---|-------|-----------|------------------|
+|ecs.r7.large|2|16|2/最高10|90万|是|最高25万|2|3|6|2万/最高11万|1.5/最高6|
+|ecs.r7.xlarge|4|32|3/最高10|100万|是|最高25万|4|4|15|4万/最高11万|2/突发最高6|
+|ecs.r7.2xlarge|8|64|5/最高10|160万|是|最高25万|8|4|15|5万/最高11万|3/最高6|
+|ecs.r7.3xlarge|12|96|8/最高10|240万|是|最高25万|8|8|15|7万/最高11万|4/最高6|
+|ecs.r7.4xlarge|16|128|10/最高25|300万|是|30万|8|8|30|8万/最高11万|5/最高6|
+|ecs.r7.6xlarge|24|192|12/最高25|450万|是|45万|12|8|30|11万/无|6/无|
+|ecs.r7.8xlarge|32|256|16/最高25|600万|是|60万|16|8|30|15万/无|8/无|
+|ecs.r7.16xlarge|64|512|32/无|1200万|是|120万|32|8|30|30万/无|16/无|
+|ecs.r7.32xlarge|128|1024|64/无|2400万|是|240万|32|15|30|60万/无|32/无|
 
 **说明：**
 
@@ -80,7 +80,7 @@ r7t的特点如下：
 -   依托第三代神龙架构，将大量虚拟化功能卸载到专用硬件，降低虚拟化开销，提供稳定可预期的超高性能。
 -   计算：
     -   处理器与内存配比为1:8，其中加密内存在内存中的占比约为50%
-    -   处理器：采用第三代Intel® Xeon®可扩展处理器，计算性能稳定
+    -   处理器：采用第三代Intel® Xeon®可扩展处理器（Ice Lake），基频2.7 GHz，全核睿频3.5 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 -   存储：
     -   I/O优化实例
@@ -101,17 +101,17 @@ r7t的特点如下：
 
 r7t包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网的私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|----------|------------|:-------|------|---|:---|-------|------|------------|
-|ecs.r7t.large|2|16.0|8.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
-|ecs.r7t.xlarge|4|32.0|16.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
-|ecs.r7t.2xlarge|8|64.0|32.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
-|ecs.r7t.3xlarge|12|96.0|48.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
-|ecs.r7t.4xlarge|16|128.0|64.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
-|ecs.r7t.6xlarge|24|192.0|96.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
-|ecs.r7t.8xlarge|32|256.0|128.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
-|ecs.r7t.16xlarge|64|512.0|256.0|32.0|1200万|是|32|8|30|30.0万|16.0|
-|ecs.r7t.32xlarge|128|1024.0|512.0|64.0|2400万|是|32|15|30|60.0万|32.0|
+|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网的私有IP|云盘IOPS基础/突发|云盘带宽基础/突发（Gbit/s）|
+|:---|:---|:------|----------|-----------------|:-------|------|---|---|:---|-------|-----------|-----------------|
+|ecs.r7t.large|2|16|8|2/最高10|90万|是|最高25万|2|3|6|2万/最高11万|1.5/最高6|
+|ecs.r7t.xlarge|4|32|16|3/最高10|100万|是|最高25万|4|4|15|4万/最高11万|2/最高6|
+|ecs.r7t.2xlarge|8|64|32|5/最高10|160万|是|最高25万|8|4|15|5万/最高11万|3/最高6|
+|ecs.r7t.3xlarge|12|96|48|8/最高10|240万|是|最高25万|8|8|15|7万/最高11万|4/最高6|
+|ecs.r7t.4xlarge|16|128|64|10/最高25|300万|是|30万|8|8|30|8万/最高11万|5/最高6|
+|ecs.r7t.6xlarge|24|192|96|12/最高25|450万|是|45万|12|8|30|11万|6/无|
+|ecs.r7t.8xlarge|32|256|128|16/最高25|600万|是|60万|16|8|30|15万|8/无|
+|ecs.r7t.16xlarge|64|512|256|32/无|1200万|是|120万|32|8|30|30万|16/无|
+|ecs.r7t.32xlarge|128|1024|512|64/无|2400万|是|240万|32|15|30|60万|32/无|
 
 **说明：**
 
@@ -156,17 +156,17 @@ re6p的特点如下：
 
 re6p包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|持久内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|---------|--------------|--------------|:-------|---|---|:---|------|------------|
-|ecs.re6p.large|2|8.0|31.5|1.0|3.0|30万|最高25万|2|2|1.0万|1.0|
-|ecs.re6p.xlarge|4|16.0|63.0|1.5|5.0|50万|最高25万|4|3|2.0万|1.5|
-|ecs.re6p.2xlarge|8|32.0|126.0|2.5|10.0|80万|最高25万|8|4|2.5万|2.0|
-|ecs.re6p.13xlarge|52|192.0|756.0|12.5|无|300万|90万|32|7|10.0万|8.0|
-|ecs.re6p.26xlarge|104|384.0|1512.0|25.0|无|600万|180万|32|15|20.0万|16,0|
-|ecs.re6p-redis.large|2|8.0|31.5|1.0|3.0|30万|最高25万|2|2|1.0万|1.0|
-|ecs.re6p-redis.xlarge|4|16.0|63.0|1.5|5.0|50万|最高25万|4|3|2.0万|1.5|
-|ecs.re6p-redis.2xlarge|8|32.0|126.0|2.5|10.0|80万|最高25万|8|4|2.5万|2.0|
-|ecs.re6p-redis.13xlarge|52|192.0|756.0|12.5|无|300万|90万|32|7|10.0万|8.0|
+|实例规格|vCPU|内存（GiB）|持久内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|---------|-----------------|:-------|---|---|:---|------|------------|
+|ecs.re6p.large|2|8|31.5|1/3|30万|最高25万|2|2|1万|1|
+|ecs.re6p.xlarge|4|16|63|1.5/5|50万|最高25万|4|3|2万|1.5|
+|ecs.re6p.2xlarge|8|32|126|2.5/10|80万|最高25万|8|4|2.5万|2|
+|ecs.re6p.13xlarge|52|192|756|12.5/无|300万|90万|32|7|10万|8|
+|ecs.re6p.26xlarge|104|384|1512|25/无|600万|180万|32|15|20万|16,0|
+|ecs.re6p-redis.large|2|8|31.5|1/3|30万|最高25万|2|2|1万|1|
+|ecs.re6p-redis.xlarge|4|16|63|1.5/5|50万|最高25万|4|3|2万|1.5|
+|ecs.re6p-redis.2xlarge|8|32|126|2.5/10|80万|最高25万|8|4|2.5万|2|
+|ecs.re6p-redis.13xlarge|52|192|756|12.5/无|300万|90万|32|7|10万|8|
 
 **说明：**
 
@@ -183,7 +183,7 @@ r6a的特点如下：
     -   处理器：2.6 GHz主频的AMD EPYCTM ROME处理器，睿频3.3 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -205,16 +205,16 @@ r6a的特点如下：
 
 r6a包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|--------------|--------------|:-------|:---|------|------------|
-|ecs.r6a.large|2|16.0|1.0|10.0|90万|2|1.25万|1.0|
-|ecs.r6a.xlarge|4|32.0|1.5|10.0|100万|3|2.0万|1.5|
-|ecs.r6a.2xlarge|8|64.0|2.5|10.0|160万|4|3.0万|2.0|
-|ecs.r6a.4xlarge|16|128.0|5.0|10.0|200万|8|6.0万|3.0|
-|ecs.r6a.8xlarge|32|256.0|8.0|10.0|300万|7|7.5万|4,0|
-|ecs.r6a.16xlarge|64|512.0|16.0|无|600万|8|15.0万|8.0|
-|ecs.r6a.32xlarge|128|1024.0|32.0|无|1200万|15|30.0万|16.0|
-|ecs.r6a.64xlarge|256|2048.0|64.0|无|2400万|15|60.0万|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|:---|------|------------|
+|ecs.r6a.large|2|16|1/10|90万|2|1.25万|1|
+|ecs.r6a.xlarge|4|32|1.5/10|100万|3|2万|1.5|
+|ecs.r6a.2xlarge|8|64|2.5/10|160万|4|3万|2|
+|ecs.r6a.4xlarge|16|128|5/10|200万|8|6万|3|
+|ecs.r6a.8xlarge|32|256|8/10|300万|7|7.5万|4,0|
+|ecs.r6a.16xlarge|64|512|16/无|600万|8|15万|8|
+|ecs.r6a.32xlarge|128|1024|32/无|1200万|15|30万|16|
+|ecs.r6a.64xlarge|256|2048|64/无|2400万|15|60万|32|
 
 **说明：**
 
@@ -231,7 +231,7 @@ r6e的特点如下：
     -   处理器：2.5 GHz主频、3.2 GHz睿频的Intel ® Xeon ® Platinum 8269，计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -254,15 +254,15 @@ r6e的特点如下：
 
 r6e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:-------|---|:--|:---|-------|------|------------|
-|ecs.r6e.large|2|16.0|突发最高10.0|90万|最高25万|2|3|6|2.0万|1.0|
-|ecs.r6e.xlarge|4|32.0|突发最高10.0|100万|最高25万|4|4|15|4.0万|1.5|
-|ecs.r6e.2xlarge|8|64.0|突发最高10.0|160万|最高25万|8|4|15|5.0万|2.0|
-|ecs.r6e.4xlarge|16|128.0|突发最高10.0|300万|30万|8|8|30|8.0万|3.0|
-|ecs.r6e.8xlarge|32|256.0|10.0|600万|60万|16|8|30|15.0万|5.0|
-|ecs.r6e.13xlarge|52|384.0|16.0|900万|90万|32|7|30|24.0万|8.0|
-|ecs.r6e.26xlarge|104|768.0|32.0|2400万|180万|32|15|30|48.0万|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.r6e.large|2|16|1.2/最高10|90万|最高25万|2|3|6|2万|1|
+|ecs.r6e.xlarge|4|32|2/最高10|100万|最高25万|4|4|15|4万|1.5|
+|ecs.r6e.2xlarge|8|64|3/最高10|160万|最高25万|8|4|15|5万|2|
+|ecs.r6e.4xlarge|16|128|6/最高10|300万|30万|8|8|30|8万|3|
+|ecs.r6e.8xlarge|32|256|10/无|600万|60万|16|8|30|15万|5|
+|ecs.r6e.13xlarge|52|384|16/无|900万|90万|32|7|30|24万|8|
+|ecs.r6e.26xlarge|104|768|32/无|2400万|180万|32|15|30|48万|16|
 
 **说明：**
 
@@ -280,7 +280,7 @@ r6的特点如下：
     -   处理器：2.5 GHz主频的Intel ® Xeon ® Platinum 8269CY（Cascade Lake），睿频3.2 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 
-        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项.md)。
+        **说明：** ECS实例默认开启超线程配置，更多信息请参见[自定义和查看CPU选项](/intl.zh-CN/实例/管理实例/自定义CPU选项/自定义和查看CPU选项.md)。
 
 -   存储：
     -   I/O优化实例
@@ -305,17 +305,17 @@ r6的特点如下：
 
 r6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:-------|---|:--|:---|-------|------|------------|
-|ecs.r6.large|2|16.0|1.0|3.0|30万|最高25万|2|2|6|1.0万|1|
-|ecs.r6.xlarge|4|32.0|1.5|5.0|50万|最高25万|4|3|10|2.0万|1.5|
-|ecs.r6.2xlarge|8|64.0|2.5|8.0|80万|最高25万|8|4|10|2.5万|2|
-|ecs.r6.3xlarge|12|96.0|4.0|10.0|90万|最高25万|8|6|10|3.0万|2.5|
-|ecs.r6.4xlarge|16|128.0|5.0|10.0|100万|30万|8|8|20|4.0万|3|
-|ecs.r6.6xlarge|24|192.0|7.5|10.0|150万|45万|12|8|20|5.0万|4|
-|ecs.r6.8xlarge|32|256.0|10.0|无|200万|60万|16|8|20|6.0万|5|
-|ecs.r6.13xlarge|52|384.0|12.5|无|300万|90万|32|7|20|10.0万|8|
-|ecs.r6.26xlarge|104|768.0|25.0|无|600万|180万|32|15|20|20.0万|16|
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:----------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.r6.large|2|16|1/3|30万|最高25万|2|2|6|1万|1|
+|ecs.r6.xlarge|4|32|1.5/5|50万|最高25万|4|3|10|2万|1.5|
+|ecs.r6.2xlarge|8|64|2.5/8|80万|最高25万|8|4|10|2.5万|2|
+|ecs.r6.3xlarge|12|96|4/10|90万|最高25万|8|6|10|3万|2.5|
+|ecs.r6.4xlarge|16|128|5/10|100万|30万|8|8|20|4万|3|
+|ecs.r6.6xlarge|24|192|7.5/10|150万|45万|12|8|20|5万|4|
+|ecs.r6.8xlarge|32|256|10/无|200万|60万|16|8|20|6万|5|
+|ecs.r6.13xlarge|52|384|12.5/无|300万|90万|32|7|20|10万|8|
+|ecs.r6.26xlarge|104|768|25/无|600万|180万|32|15|20|20万|16|
 
 **说明：**
 
@@ -344,9 +344,9 @@ re6包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
-|ecs.re6.13xlarge|52|768.0|10.0|180万|16|7|20|5.0万|4|
-|ecs.re6.26xlarge|104|1536.0|16.0|300万|32|7|20|10.0万|8|
-|ecs.re6.52xlarge|208|3072.0|32.0|600万|32|15|20|20.0万|16|
+|ecs.re6.13xlarge|52|768|10|180万|16|7|20|5万|4|
+|ecs.re6.26xlarge|104|1536|16|300万|32|7|20|10万|8|
+|ecs.re6.52xlarge|208|3072|32|600万|32|15|20|20万|16|
 
 **说明：**
 
@@ -380,14 +380,14 @@ r5包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|
-|ecs.r5.large|2|16.0|1.0|30万|2|2|6|
-|ecs.r5.xlarge|4|32.0|1.5|50万|2|3|10|
-|ecs.r5.2xlarge|8|64.0|2.5|80万|2|4|10|
-|ecs.r5.3xlarge|12|96.0|4.0|90万|4|6|10|
-|ecs.r5.4xlarge|16|128.0|5.0|100万|4|8|20|
-|ecs.r5.6xlarge|24|192.0|7.5|150万|6|8|20|
-|ecs.r5.8xlarge|32|256.0|10.0|200万|8|8|20|
-|ecs.r5.16xlarge|64|512.0|20.0|400万|16|8|20|
+|ecs.r5.large|2|16|1|30万|2|2|6|
+|ecs.r5.xlarge|4|32|1.5|50万|2|3|10|
+|ecs.r5.2xlarge|8|64|2.5|80万|2|4|10|
+|ecs.r5.3xlarge|12|96|4|90万|4|6|10|
+|ecs.r5.4xlarge|16|128|5|100万|4|8|20|
+|ecs.r5.6xlarge|24|192|7.5|150万|6|8|20|
+|ecs.r5.8xlarge|32|256|10|200万|8|8|20|
+|ecs.r5.16xlarge|64|512|20|400万|16|8|20|
 
 **说明：**
 
@@ -417,9 +417,9 @@ re4包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|
-|ecs.re4.10xlarge|40|480.0|8.0|100万|8|4|10|
-|ecs.re4.20xlarge|80|960.0|15.0|200万|16|8|20|
-|ecs.re4.40xlarge|160|1920.0|30.0|450万|16|8|20|
+|ecs.re4.10xlarge|40|480|8|100万|8|4|10|
+|ecs.re4.20xlarge|80|960|15|200万|16|8|20|
+|ecs.re4.40xlarge|160|1920|30|450万|16|8|20|
 
 **说明：**
 
@@ -432,7 +432,7 @@ re4e的特点如下：
 
 -   针对高性能数据库、内存数据库和其他内存密集型企业应用程序进行了优化
 -   计算：
-    -   处理器与内存配比为1:24，高内存资源占比，最大支持3840.0 GiB内存
+    -   处理器与内存配比为1:24，高内存资源占比，最大支持3840 GiB内存
     -   处理器：2.2 GHz主频的Intel ® Xeon ® E7 8880 v4（Broadwell），最大睿频2.4 GHz，计算性能稳定
 -   存储：
     -   I/O优化实例
@@ -448,7 +448,7 @@ re4e包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|
-|ecs.re4e.40xlarge|160|3840.0|30.0|450万|16|15|20|
+|ecs.re4e.40xlarge|160|3840|30|450万|16|15|20|
 
 **说明：**
 
@@ -479,14 +479,14 @@ se1ne包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|
-|ecs.se1ne.large|2|16.0|1.0|30万|2|2|6|
-|ecs.se1ne.xlarge|4|32.0|1.5|50万|2|3|10|
-|ecs.se1ne.2xlarge|8|64.0|2.0|100万|4|4|10|
-|ecs.se1ne.3xlarge|12|96.0|2.5|130万|4|6|10|
-|ecs.se1ne.4xlarge|16|128.0|3.0|160万|4|8|20|
-|ecs.se1ne.6xlarge|24|192.0|4.5|200万|6|8|20|
-|ecs.se1ne.8xlarge|32|256.0|6.0|250万|8|8|20|
-|ecs.se1ne.14xlarge|56|480.0|10.0|450万|14|8|20|
+|ecs.se1ne.large|2|16|1|30万|2|2|6|
+|ecs.se1ne.xlarge|4|32|1.5|50万|2|3|10|
+|ecs.se1ne.2xlarge|8|64|2|100万|4|4|10|
+|ecs.se1ne.3xlarge|12|96|2.5|130万|4|6|10|
+|ecs.se1ne.4xlarge|16|128|3|160万|4|8|20|
+|ecs.se1ne.6xlarge|24|192|4.5|200万|6|8|20|
+|ecs.se1ne.8xlarge|32|256|6|250万|8|8|20|
+|ecs.se1ne.14xlarge|56|480|10|450万|14|8|20|
 
 **说明：**
 
@@ -514,12 +514,12 @@ se1包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|
-|ecs.se1.large|2|16.0|0.5|10万|1|2|6|
-|ecs.se1.xlarge|4|32.0|0.8|20万|1|3|10|
-|ecs.se1.2xlarge|8|64.0|1.5|40万|1|4|10|
-|ecs.se1.4xlarge|16|128.0|3.0|50万|2|8|20|
-|ecs.se1.8xlarge|32|256.0|6.0|80万|3|8|20|
-|ecs.se1.14xlarge|56|480.0|10.0|120万|4|8|20|
+|ecs.se1.large|2|16|0.5|10万|1|2|6|
+|ecs.se1.xlarge|4|32|0.8|20万|1|3|10|
+|ecs.se1.2xlarge|8|64|1.5|40万|1|4|10|
+|ecs.se1.4xlarge|16|128|3|50万|2|8|20|
+|ecs.se1.8xlarge|32|256|6|80万|3|8|20|
+|ecs.se1.14xlarge|56|480|10|120万|4|8|20|
 
 **说明：**
 
